--- a/index.html
+++ b/index.html
@@ -8,7 +8,43 @@
 
 </head>
 <body>
-  <h1>Hello</h1>
+  <header class="header__container">
+    <div class="wrap">
+      <div id="top">
+        <h1>Hi I am Csilla junior software developer </h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#about">About me</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    
+    <section id="about">
+
+    </section>
+
+
+    <section id="projects">
+
+    </section>
+
+
+
+    <section id="skills">
+
+    </section>
+
+
+  </main>
+  <footer id=contact>
+
+  </footer>
   <script src="app.js"></script>
 </body>
 </html>
