--- a/index.html
+++ b/index.html
@@ -1,50 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Csilla</title>
-  <link rel="stylesheet" href="./style/style.css">
-
+  <title>CodessCsilla</title>
+  <link rel="stylesheet" href="/dist/css/main.css">
 </head>
+
 <body>
-  <header class="header__container">
-    <div class="wrap">
-      <div id="top">
-        <h1>Hi I am Csilla junior software developer </h1>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="#about">About me</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+  <header>
+    <div class="menu-btn">
+      <span class="menu-btn__burger"></span>
     </div>
+    <nav class="nav">
+      <ul class="menu-nav">
+        <li class="menu-nav__item">
+          <a href="index.html" class="menu-nav__link">
+            Home
+          </a>
+        </li>
+        <li class="menu-nav__item">
+          <a href="projects.html" class="menu-nav__link">
+            Projects
+          </a>
+        </li>
+        <li class="menu-nav__item">
+          <a href="skills.html" class="menu-nav__link">
+            Skills
+          </a>
+        </li>
+        <li class="menu-nav__item">
+          <a href="contact.html" class="menu-nav__link">
+            Contact Me
+          </a>
+        </li>
+      </ul>
+    </nav>
   </header>
+
   <main>
-    
-    <section id="about">
+    <section class="home">
+      <h2>Hi! My name is </h2>
+      <h1 class="home__name">
+        <span class="home__name--first">Csilla</span> 
+        Barna
+      </h1>
+      <h2>
+        Junior Software Engineer
+      </h2>
+      <!-- get fontawesome -->
+      <div class="social-icons">
+        <a href="#">
+          T<i class="twitter"></i>
+        </a>
+        <a href="#">
+         L <i class="linkedin"></i>
+        </a>
+        <a href="#">
+          G <i class="github"></i>
+        </a>
 
+      </div>
     </section>
-
-
-    <section id="projects">
-
-    </section>
-
-
-
-    <section id="skills">
-
-    </section>
-
-
   </main>
-  <footer id=contact>
 
+  <footer>
+    💌
   </footer>
-  <script src="app.js"></script>
+  <script src="./js/app.js"></script>
+
+
 </body>
 </html>
