--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CodessCsilla</title>
   <link rel="stylesheet" href="/dist/css/main.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;0,800;1,100&family=Sigmar+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -69,7 +71,6 @@
     💌
   </footer>
   <script src="./js/app.js"></script>
-
 
 </body>
 </html>
