--- a/about.html
+++ b/about.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>portfolioCodessCsilla</title>
+  <title>About Csilla</title>
   <link rel="stylesheet" href="/dist/css/main.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;0,800;1,100&family=Sigmar+One&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;0,800;1,100&family=Sigmar+One&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -17,12 +19,12 @@
     </div>
     <nav class="nav">
       <ul class="menu-nav">
-        <li class="menu-nav__item active">
+        <li class="menu-nav__item">
           <a href="index.html" class="menu-nav__link">
             Home
           </a>
         </li>
-        <li class="menu-nav__item">
+        <li class="menu-nav__item active">
           <a href="about.html" class="menu-nav__link">
             About Me
           </a>
@@ -47,22 +49,31 @@
   </header>
 
   <main>
-    <section class="home">
-      <h2>Hi! My name is </h2>
-      <h1 class="home__name">
-        <span class="home__name--first">Csilla</span> 
-        Barna
-      </h1>
-      <h2>
-        Junior Software Engineer
-      </h2>
+    <section class="about">
+      <article class="about__bio-image">
+        <div class="about__bio">
+          <h2 class="text-secondary">
+            BIO
+          </h2>
+          <p>Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Veritatis aliquid in modi quasi aut nostrum enim, iure porro consectetur et dolore
+            incidunt dolorum deserunt sunt
+            aperiam doloremque sint fugit nulla dolor dolores.
+            Repudiandae, aliquid tempora?
+            Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Veritatis aliquid in modi quasi aut nostrum enim, iure porro consectetur et dolore
+            incidunt dolorum deserunt sunt
+            aperiam doloremque sint fugit nulla dolor dolores.
+            Repudiandae, aliquid tempora?</p>
+        </div>
+      </article>
       <!-- get fontawesome -->
       <div class="social-icons">
         <a href="#">
           T<i class="twitter"></i>
         </a>
         <a href="#">
-         L <i class="linkedin"></i>
+          L <i class="linkedin"></i>
         </a>
         <a href="#">
           G <i class="github"></i>
@@ -70,13 +81,13 @@
 
       </div>
     </section>
-    <footer>
-      💌
-    </footer>
   </main>
 
- 
+  <footer>
+    💌
+  </footer>
   <script src="./js/app.js"></script>
 
 </body>
+
 </html>
