--- a/about.html
+++ b/about.html
@@ -50,12 +50,12 @@
 
   <main>
     <section class="about">
-      <article class="about__bio-image">
+      <article class="about__bio-image"></article>
+
+    
+
         <div class="about__bio">
-          <h2 class="text-secondary">
-            BIO
-          </h2>
-          <p>Lorem ipsum dolor sit amet consectetur
+            <p>Lorem ipsum dolor sit amet consectetur
             adipisicing elit. Veritatis aliquid in modi quasi aut nostrum enim, iure porro consectetur et dolore
             incidunt dolorum deserunt sunt
             aperiam doloremque sint fugit nulla dolor dolores.
@@ -66,7 +66,6 @@
             aperiam doloremque sint fugit nulla dolor dolores.
             Repudiandae, aliquid tempora?</p>
         </div>
-      </article>
       <!-- get fontawesome -->
       <div class="social-icons">
         <a href="#">
