--- a/index.html
+++ b/index.html
@@ -7,76 +7,290 @@
   <title>portfolioCodessCsilla</title>
   <link rel="stylesheet" href="/dist/css/main.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;0,800;1,100&family=Sigmar+One&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;0,800;1,100&family=Sigmar+One&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
+  <!-- NAVBAR -->
   <header>
     <div class="menu-btn">
       <span class="menu-btn__burger"></span>
     </div>
     <nav class="nav">
       <ul class="menu-nav">
-        <li class="menu-nav__item active">
-          <a href="index.html" class="menu-nav__link">
+        <li class="menu-nav__item">
+          <a href="#hello" class="menu-nav__link">
             Home
           </a>
         </li>
         <li class="menu-nav__item">
-          <a href="about.html" class="menu-nav__link">
+          <a href="#me" class="menu-nav__link">
             About Me
           </a>
         </li>
         <li class="menu-nav__item">
-          <a href="projects.html" class="menu-nav__link">
+          <a href="#work" class="menu-nav__link">
             Projects
           </a>
         </li>
         <li class="menu-nav__item">
-          <a href="skills.html" class="menu-nav__link">
+          <a href="#stack" class="menu-nav__link">
             Skills
           </a>
         </li>
         <li class="menu-nav__item">
-          <a href="contact.html" class="menu-nav__link">
+          <a href="#connect" class="menu-nav__link">
             Contact Me
           </a>
         </li>
       </ul>
     </nav>
   </header>
-
   <main>
-    <section class="home">
+    <!-- HOME -->
+    <section id="hello" class="home">
       <h2>Hi! My name is </h2>
       <h1 class="home__name">
-        <span class="home__name--first">Csilla</span> 
+        <span class="home__name--first">Csilla</span>
         Barna
       </h1>
       <h2>
-        Junior Software Engineer
+        Junior Software Developer
       </h2>
-      <!-- get fontawesome -->
+    </section>
+    <!-- ABOUT ME -->
+    <section id="me" class="about">
+      <h2>About Me</h2>
+      <figure class="about__bio-image"></figure>
+      <div class="about__bio">
+        <p>Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Veritatis aliquid in modi quasi aut nostrum enim, iure porro consectetur et dolore
+          incidunt dolorum deserunt sunt
+          aperiam doloremque sint fugit nulla dolor dolores.
+          Repudiandae, aliquid tempora?
+          Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Veritatis aliquid in modi quasi aut nostrum enim, iure porro consectetur et dolore
+          incidunt dolorum deserunt sunt
+          aperiam doloremque sint fugit nulla dolor dolores.
+          Repudiandae, aliquid tempora?</p>
+      </div>
+    </section>
+    <!-- PROJECTS -->
+    <section id="work" class="projects">
+      <h1>My Projects</h1>
+      <div class="slideshow-container">
+        <div class="mySlides fade">
+          <img src="/../../assets/devmap.gif" style="width:100%">
+          <h3>Know your Heritage</h3>
+          <div class="projects_description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci vel sunt temporibus sed nihil soluta,
+              corrupti eius voluptatum natus, ipsam enim alias. Magnam, reiciendis veritatis molestiae optio maiores
+              iure,
+              perferendis aperiam ducimus aliquam est modi. Amet nemo, eos omnis vero ipsa, placeat magnam neque maiores
+              eveniet nobis at laboriosam quibusdam, eaque esse iure magni sed error alias dolor! Sapiente quibusdam
+              quod
+              officiis! Quia eius molestiae eveniet aliquam doloribus maiores eaque, iste, rem sequi mollitia obcaecati
+              necessitatibus sunt vel temporibus asperiores amet? Dolor reiciendis quia dolorum ea, consequuntur a
+              impedit
+              incidunt optio totam magnam officia deleniti assumenda? Impedit excepturi suscipit voluptatibus!</p>
+          </div>
+          <div class="projects__btns">
+            <a href="" class="projects_btn">
+              prew
+            </a>
+            <a href="" class="projects_btn">
+              github
+            </a>
+          </div>
+        </div>
+        <div class="mySlides fade">
+          <img src="../../assets/connect.jpeg" style="width:100%">
+          <h3>dev.map</h3>
+          <div class="projects_description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci vel sunt temporibus sed nihil soluta,
+              corrupti eius voluptatum natus, ipsam enim alias. Magnam, reiciendis veritatis molestiae optio maiores
+              iure,
+              perferendis aperiam ducimus aliquam est modi. Amet nemo, eos omnis vero ipsa, placeat magnam neque maiores
+              eveniet nobis at laboriosam quibusdam, eaque esse iure magni sed error alias dolor! Sapiente quibusdam
+              quod
+              officiis! Quia eius molestiae eveniet aliquam doloribus maiores eaque, iste, rem sequi mollitia obcaecati
+              necessitatibus sunt vel temporibus asperiores amet? Dolor reiciendis quia dolorum ea, consequuntur a
+              impedit
+              incidunt optio totam magnam officia deleniti assumenda? Impedit excepturi suscipit voluptatibus!</p>
+          </div>
+          <div class="projects__btns">
+            <a href="" class="projects_btn">
+              prew
+            </a>
+            <a href="" class="projects_btn">
+              github
+            </a>
+          </div>
+        </div>
+        <div class="mySlides fade">
+          <img src="../../assets/background.jpeg" style="width:100%">
+          <h3>Movie Search</h3>
+          <div class="projects_description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci vel sunt temporibus sed nihil soluta,
+              corrupti eius voluptatum natus, ipsam enim alias. Magnam, reiciendis veritatis molestiae optio maiores
+              iure,
+              perferendis aperiam ducimus aliquam est modi. Amet nemo, eos omnis vero ipsa, placeat magnam neque maiores
+              eveniet nobis at laboriosam quibusdam, eaque esse iure magni sed error alias dolor! Sapiente quibusdam
+              quod
+              officiis! Quia eius molestiae eveniet aliquam doloribus maiores eaque, iste, rem sequi mollitia obcaecati
+              necessitatibus sunt vel temporibus asperiores amet? Dolor reiciendis quia dolorum ea, consequuntur a
+              impedit
+              incidunt optio totam magnam officia deleniti assumenda? Impedit excepturi suscipit voluptatibus!</p>
+          </div>
+          <div class="projects__btns">
+            <a href="" class="projects_btn">
+              prew
+            </a>
+            <a href="" class="projects_btn">
+              github
+            </a>
+          </div>
+          <div class="mySlides fade">
+            <img src="../../assets/background.jpeg" style="width:100%">
+            <h3>partyPOP🎈</h3>
+            <div class="projects_description">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci vel sunt temporibus sed nihil soluta,
+                corrupti eius voluptatum natus, ipsam enim alias. Magnam, reiciendis veritatis molestiae optio maiores
+                iure,
+                perferendis aperiam ducimus aliquam est modi. Amet nemo, eos omnis vero ipsa, placeat magnam neque
+                maiores
+                eveniet nobis at laboriosam quibusdam, eaque esse iure magni sed error alias dolor! Sapiente quibusdam
+                quod
+                officiis! Quia eius molestiae eveniet aliquam doloribus maiores eaque, iste, rem sequi mollitia
+                obcaecati
+                necessitatibus sunt vel temporibus asperiores amet? Dolor reiciendis quia dolorum ea, consequuntur a
+                impedit
+                incidunt optio totam magnam officia deleniti assumenda? Impedit excepturi suscipit voluptatibus!</p>
+            </div>
+            <div class="projects__btns">
+              <a href="" class="projects_btn">
+                prew
+              </a>
+              <a href="" class="projects_btn">
+                github
+              </a>
+            </div>
+          </div>
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <div style="text-align:center">
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
+          <span class="dot" onclick="currentSlide(3)"></span>
+          <span class="dot" onclick="currentSlide(4)"></span>
+        </div>
+    </section>
+
+    <!-- SKILLS -->
+    <section id="stack" class="skills">
+      <h1>Skills</h1>
+      <div class="skills__items">
+        <div class="skills__item">
+          <a href="#">
+            JS<i class="js"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            JS<i class="js"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            JS<i class="js"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            JS<i class="js"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            JS<i class="js"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            JS<i class="js"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            JS<i class="js"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            JS<i class="js"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            JS<i class="js"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            JS<i class="js"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            JS<i class="js"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            JS<i class="js"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            JS<i class="js"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+    <!-- CONTACT -->
+    <!-- get fontawesome -->
+    <section id="connect" class="contact">
+      <h2>Contact Me...</h2>
+      <div>
+        <a href="#">
+          L <i class="linkedin"></i>
+        </a>
+        <a href="#">
+          G <i class="github"></i>
+        </a>
+      </div>
+    </section>
+    <!-- SOCIAL -->
+    <section>
       <div class="social-icons">
         <a href="#">
           T<i class="twitter"></i>
         </a>
         <a href="#">
-         L <i class="linkedin"></i>
+          L <i class="linkedin"></i>
         </a>
         <a href="#">
           G <i class="github"></i>
         </a>
-
-      </div>
     </section>
+    <!-- FOOTER -->
     <footer>
       💌
     </footer>
   </main>
-
- 
   <script src="./js/app.js"></script>
-
 </body>
 </html>
