--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             </a>
           </div>
         </div>
+
         <div class="mySlides fade">
           <img src="../../assets/background.jpeg" style="width:100%">
           <h3>Movie Search</h3>
@@ -152,41 +153,41 @@
               github
             </a>
           </div>
-          <div class="mySlides fade">
-            <img src="../../assets/background.jpeg" style="width:100%">
-            <h3>partyPOP🎈</h3>
-            <div class="projects_description">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci vel sunt temporibus sed nihil soluta,
-                corrupti eius voluptatum natus, ipsam enim alias. Magnam, reiciendis veritatis molestiae optio maiores
-                iure,
-                perferendis aperiam ducimus aliquam est modi. Amet nemo, eos omnis vero ipsa, placeat magnam neque
-                maiores
-                eveniet nobis at laboriosam quibusdam, eaque esse iure magni sed error alias dolor! Sapiente quibusdam
-                quod
-                officiis! Quia eius molestiae eveniet aliquam doloribus maiores eaque, iste, rem sequi mollitia
-                obcaecati
-                necessitatibus sunt vel temporibus asperiores amet? Dolor reiciendis quia dolorum ea, consequuntur a
-                impedit
-                incidunt optio totam magnam officia deleniti assumenda? Impedit excepturi suscipit voluptatibus!</p>
-            </div>
-            <div class="projects__btns">
-              <a href="" class="projects_btn">
-                prew
-              </a>
-              <a href="" class="projects_btn">
-                github
-              </a>
-            </div>
+        </div>
+        <div class="mySlides fade">
+          <img src="/../../assets/letter-bg.jpeg" style="width:100%">
+          <h3>Know your Heritage</h3>
+          <div class="projects_description">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci vel sunt temporibus sed nihil soluta,
+              corrupti eius voluptatum natus, ipsam enim alias. Magnam, reiciendis veritatis molestiae optio maiores
+              iure,
+              perferendis aperiam ducimus aliquam est modi. Amet nemo, eos omnis vero ipsa, placeat magnam neque maiores
+              eveniet nobis at laboriosam quibusdam, eaque esse iure magni sed error alias dolor! Sapiente quibusdam
+              quod
+              officiis! Quia eius molestiae eveniet aliquam doloribus maiores eaque, iste, rem sequi mollitia obcaecati
+              necessitatibus sunt vel temporibus asperiores amet? Dolor reiciendis quia dolorum ea, consequuntur a
+              impedit
+              incidunt optio totam magnam officia deleniti assumenda? Impedit excepturi suscipit voluptatibus!</p>
           </div>
-          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          <div class="projects__btns">
+            <a href="" class="projects_btn">
+              prew
+            </a>
+            <a href="" class="projects_btn">
+              github
+            </a>
+          </div>
         </div>
-        <div style="text-align:center">
-          <span class="dot" onclick="currentSlide(1)"></span>
-          <span class="dot" onclick="currentSlide(2)"></span>
-          <span class="dot" onclick="currentSlide(3)"></span>
-          <span class="dot" onclick="currentSlide(4)"></span>
-        </div>
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+      </div>
     </section>
 
     <!-- SKILLS -->
@@ -291,6 +292,10 @@
       💌
     </footer>
   </main>
+
+
   <script src="./js/app.js"></script>
+
 </body>
+
 </html>
