--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <!-- NAVBAR -->
-  <header>
+  <header class="header">
     <div class="menu-btn">
       <span class="menu-btn__burger"></span>
     </div>
@@ -51,7 +51,6 @@
   <main>
     <!-- HOME -->
     <section id="hello" class="home">
-      <h2>Hi! My name is </h2>
       <h1 class="home__name">
         <span class="home__name--first">Csilla</span>
         Barna
@@ -60,9 +59,10 @@
         Junior Software Developer
       </h2>
     </section>
+
     <!-- ABOUT ME -->
+    <h2 class="aboutH">About Me</h2>
     <section id="me" class="about">
-      <h2>About Me</h2>
       <figure class="about__bio-image"></figure>
       <div class="about__bio">
         <p>Lorem ipsum dolor sit amet consectetur
@@ -98,10 +98,10 @@
           </div>
           <div class="projects__btns">
             <a href="" class="projects_btn">
-              prew
+              <i class="fas fa-eye"></i>
             </a>
             <a href="" class="projects_btn">
-              github
+              <i class="fab fa-github-alt"></i>
             </a>
           </div>
         </div>
@@ -122,10 +122,10 @@
           </div>
           <div class="projects__btns">
             <a href="" class="projects_btn">
-              prew
+              <i class="fas fa-eye"></i>
             </a>
             <a href="" class="projects_btn">
-              github
+              <i class="fab fa-github-alt"></i>
             </a>
           </div>
         </div>
@@ -147,10 +147,10 @@
           </div>
           <div class="projects__btns">
             <a href="" class="projects_btn">
-              prew
+              <i class="fas fa-eye"></i>
             </a>
             <a href="" class="projects_btn">
-              github
+              <i class="fab fa-github-alt"></i>
             </a>
           </div>
         </div>
@@ -171,10 +171,10 @@
           </div>
           <div class="projects__btns">
             <a href="" class="projects_btn">
-              prew
+              <i class="fas fa-eye"></i>
             </a>
             <a href="" class="projects_btn">
-              github
+              <i class="fab fa-github-alt"></i>
             </a>
           </div>
         </div>
@@ -274,25 +274,25 @@
         </a>
       </div>
     </section>
-    <!-- SOCIAL -->
-    <section>
+ <!-- FOOTER -->
+ <footer>
+ <section>
       <div class="social-icons">
         <a href="#">
-          T<i class="twitter"></i>
+          <i class="fab fa-linkedin fa-2x"></i>
         </a>
         <a href="#">
-          L <i class="linkedin"></i>
+          <i class="fab fa-twitter fa-2x"></i>
         </a>
         <a href="#">
-          G <i class="github"></i>
+          <i class="fab fa-github fa-2x"></i>
         </a>
     </section>
-    <!-- FOOTER -->
-    <footer>
-      💌
-    </footer>
+   
+  </footer>
   </main>
 
+  <script src="https://kit.fontawesome.com/c1b257e9a0.js" crossorigin="anonymous"></script>
 
   <script src="./js/app.js"></script>
 
