--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;0,800;1,100&family=Sigmar+One&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@master/devicon.min.css">
+
 </head>
 
 <body>
@@ -196,7 +198,59 @@
       <div class="skills__items">
         <div class="skills__item">
           <a href="#">
-            JS<i class="js"></i>
+            <i class="fab fa-js-square"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            <i class="devicon-python-plain-wordmark"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            <i class="devicon-html5-plain-wordmark"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            <i class="devicon-css3-plain-wordmark"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            <i class="fab fa-sass"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            <i class="fab fa-react"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            <i class="fab fa-node"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            <i class="devicon-express-original-wordmark"></i>
+          </a>
+        </div>
+        <i class="devicon-webpack-plain-wordmark"></i>
+
+        <div class="skills__item">
+          <a href="#">
+            <i class="fab fa-npm"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            <i class="devicon-mongodb-plain-wordmark"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            <i class="devicon-postgresql-plain-wordmark"></i>
           </a>
         </div>
         <div class="skills__item">
@@ -206,47 +260,17 @@
         </div>
         <div class="skills__item">
           <a href="#">
-            JS<i class="js"></i>
+            <i class="fab fa-git-alt"></i>
           </a>
         </div>
         <div class="skills__item">
           <a href="#">
-            JS<i class="js"></i>
+            <i class="fab fa-github-square"></i>
           </a>
         </div>
         <div class="skills__item">
           <a href="#">
-            JS<i class="js"></i>
-          </a>
-        </div>
-        <div class="skills__item">
-          <a href="#">
-            JS<i class="js"></i>
-          </a>
-        </div>
-        <div class="skills__item">
-          <a href="#">
-            JS<i class="js"></i>
-          </a>
-        </div>
-        <div class="skills__item">
-          <a href="#">
-            JS<i class="js"></i>
-          </a>
-        </div>
-        <div class="skills__item">
-          <a href="#">
-            JS<i class="js"></i>
-          </a>
-        </div>
-        <div class="skills__item">
-          <a href="#">
-            JS<i class="js"></i>
-          </a>
-        </div>
-        <div class="skills__item">
-          <a href="#">
-            JS<i class="js"></i>
+            <i class="devicon-visualstudio-plain"></i>
           </a>
         </div>
         <div class="skills__item">
@@ -267,29 +291,29 @@
       <h2>Contact Me...</h2>
       <div>
         <a href="#">
-          L <i class="linkedin"></i>
-        </a>
-        <a href="#">
-          G <i class="github"></i>
-        </a>
-      </div>
-    </section>
- <!-- FOOTER -->
- <footer>
- <section>
-      <div class="social-icons">
-        <a href="#">
           <i class="fab fa-linkedin fa-2x"></i>
-        </a>
-        <a href="#">
-          <i class="fab fa-twitter fa-2x"></i>
         </a>
         <a href="#">
           <i class="fab fa-github fa-2x"></i>
         </a>
+      </div>
     </section>
-   
-  </footer>
+    <!-- FOOTER -->
+    <footer>
+      <section>
+        <div class="social-icons">
+          <a href="#">
+            <i class="fab fa-linkedin fa-2x"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-twitter fa-2x"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-github fa-2x"></i>
+          </a>
+      </section>
+
+    </footer>
   </main>
 
   <script src="https://kit.fontawesome.com/c1b257e9a0.js" crossorigin="anonymous"></script>
