--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+  
   <!-- NAVBAR -->
   <header class="header">
     <div class="menu-btn">
@@ -63,9 +64,11 @@
     </section>
 
     <!-- ABOUT ME -->
-    <h2 class="aboutH">About Me</h2>
+    <h1 class="aboutH">About Me</h1>
     <section id="me" class="about">
-      <figure class="about__bio-image"></figure>
+      <figure >
+        <img class="about__bio-image" src="../../assets/profile-pic-professional.jpg" alt="">
+      </figure>
       <div class="about__bio">
         <p>Lorem ipsum dolor sit amet consectetur
           adipisicing elit. Veritatis aliquid in modi quasi aut nostrum enim, iure porro consectetur et dolore
@@ -218,12 +221,7 @@
         </div>
         <div class="skills__item">
           <a href="#">
-            <i class="fab fa-sass"></i>
-          </a>
-        </div>
-        <div class="skills__item">
-          <a href="#">
-            <i class="fab fa-react"></i>
+            <i class="devicon-react-original-wordmark"></i>
           </a>
         </div>
         <div class="skills__item">
@@ -231,16 +229,27 @@
             <i class="fab fa-node"></i>
           </a>
         </div>
-        <div class="skills__item">
+        <div class="skills__item big">
           <a href="#">
             <i class="devicon-express-original-wordmark"></i>
           </a>
         </div>
-        <i class="devicon-webpack-plain-wordmark"></i>
-
+        <div class="skills__item bigger">
+          <a href="#">
+            <i class="devicon-webpack-plain-wordmark"></i>
+          </a>
+        </div>
         <div class="skills__item">
           <a href="#">
             <i class="fab fa-npm"></i>
+          </a>
+        </div>
+        <div class="skills__item small" style="background-color:rgb(199, 211, 233); border-radius:10px">
+          <img src="../../assets/flask.svg" alt="">
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            <i class="fab fa-sass"></i>
           </a>
         </div>
         <div class="skills__item">
@@ -255,34 +264,32 @@
         </div>
         <div class="skills__item">
           <a href="#">
-            JS<i class="js"></i>
+            <i class="devicon-babel-plain"></i>
           </a>
         </div>
         <div class="skills__item">
           <a href="#">
-            <i class="fab fa-git-alt"></i>
+            <i class="devicon-git-plain-wordmark"></i>
           </a>
-        </div>
-        <div class="skills__item">
-          <a href="#">
-            <i class="fab fa-github-square"></i>
-          </a>
-        </div>
-        <div class="skills__item">
-          <a href="#">
-            <i class="devicon-visualstudio-plain"></i>
-          </a>
-        </div>
-        <div class="skills__item">
-          <a href="#">
-            JS<i class="js"></i>
-          </a>
-        </div>
-        <div class="skills__item">
-          <a href="#">
-            JS<i class="js"></i>
-          </a>
-        </div>
+      </div>
+      <div class="skills__item">
+        <a href="#">
+          <i class="devicon-github-original-wordmark"></i>
+        </a>
+      </div>
+      <div class="skills__item bigger">
+        <a href="#">
+          <i class="devicon-visualstudio-plain-wordmark"></i>
+        </a>
+      </div>
+      <div class="skills__item">
+        <a href="#">
+          <i class="devicon-heroku-original-wordmark"></i>
+        </a>
+      </div>
+      <div class="skills__item" style="background-color: white;">
+        <img src="../assets/rest-api.svg" alt="">
+      </div>
       </div>
     </section>
     <!-- CONTACT -->
