--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>portfolioCodessCsilla</title>
   <link rel="stylesheet" href="/dist/css/main.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="stylesheet" href="css/animate.css">
 
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;0,800;1,100&family=Sigmar+One&display=swap"
@@ -17,7 +16,7 @@
 </head>
 
 <body>
-  
+
   <!-- NAVBAR -->
   <header class="header">
     <div class="menu-btn">
@@ -70,22 +69,21 @@
     <!-- ABOUT ME -->
     <h1 class="aboutH">About Me</h1>
     <section id="me" class="about">
-      <figure >
+      <figure>
         <div class=about_img-cont>
-        <img class="about__bio-image" src="../../assets/profile-pic-professional.jpg" alt="">
-      </div>
+          <img class="about__bio-image" src="../../assets/profile-pic-professional.jpg" alt="">
+        </div>
       </figure>
       <div class="about__bio">
-        <p>Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Veritatis aliquid in modi quasi aut nostrum enim, iure porro consectetur et dolore
-          incidunt dolorum deserunt sunt
-          aperiam doloremque sint fugit nulla dolor dolores.
-          Repudiandae, aliquid tempora?
-          Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Veritatis aliquid in modi quasi aut nostrum enim, iure porro consectetur et dolore
-          incidunt dolorum deserunt sunt
-          aperiam doloremque sint fugit nulla dolor dolores.
-          Repudiandae, aliquid tempora?</p>
+        <p>
+          I have always been deeply curious about how the world works and what makes things tick! It was this curiosity,
+          paired with an analytical mindset and persistence which led me to pivot my career to programming.
+          My experience working in hospitality environments required efficient team collaboration, proactivity and
+          performing under pressure, could also help my transition into software development. A great inspiration for me
+          to discover and create something which can help make people's lives easier.
+          My ideal future developer role would be in a company with a good support system for juniors, where I can
+          further develop my knowledge in a hands-on way.
+        </p>
       </div>
     </section>
     <!-- PROJECTS -->
@@ -93,102 +91,84 @@
       <h1>My Projects</h1>
       <div class="slideshow-container">
         <div class="mySlides fade">
-          <img src="../../assets/letter-bg.jpeg" style="width:100%">
+          <img src="../../assets/heritage.gif" style="width:100%">
           <h3>Know your Heritage</h3>
           <div class="projects_description">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci vel sunt temporibus sed nihil soluta,
-              corrupti eius voluptatum natus, ipsam enim alias. Magnam, reiciendis veritatis molestiae optio maiores
-              iure,
-              perferendis aperiam ducimus aliquam est modi. Amet nemo, eos omnis vero ipsa, placeat magnam neque maiores
-              eveniet nobis at laboriosam quibusdam, eaque esse iure magni sed error alias dolor! Sapiente quibusdam
-              quod
-              officiis! Quia eius molestiae eveniet aliquam doloribus maiores eaque, iste, rem sequi mollitia obcaecati
-              necessitatibus sunt vel temporibus asperiores amet? Dolor reiciendis quia dolorum ea, consequuntur a
-              impedit
-              incidunt optio totam magnam officia deleniti assumenda? Impedit excepturi suscipit voluptatibus!</p>
+            <p> Stack: <strong>Python, Flask, PostgreSQL, ReactJS, Bulma </strong></p>
+            <p>Duration - 7 days; duo project</p>
+            Full-stack Python app which showcases UNESCO's world heritage list. The user is able to comment on sites and
+            add their favourites to the wish list. I was working on the site and user controller. Since we worked with a
+            relational database I added the comments as a “one to many” relationship. Finished up on the site component
+            with the fully working wish list and displayed it on the front end. Deployed on Heroku.
+            </p>
           </div>
           <div class="projects__btns">
-            <a href="" class="projects_btn">
+            <a href="https://know-your-heritage.herokuapp.com/" class="projects_btn"target="_blank">
               <i class="fas fa-eye"></i>
             </a>
-            <a href="" class="projects_btn">
+            <a href="https://github.com/csillabarna/project-4" class="projects_btn"target="_blank">
               <i class="fab fa-github-alt"></i>
             </a>
           </div>
         </div>
         <div class="mySlides fade">
-          <video src="./assets/dev.map.mp4" width="100%" muted autoplay loop>  
-          </video>
+          <img src="../../assets/devMap.gif" style="width:100%">
           <h3>dev.map</h3>
           <div class="projects_description">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci vel sunt temporibus sed nihil soluta,
-              corrupti eius voluptatum natus, ipsam enim alias. Magnam, reiciendis veritatis molestiae optio maiores
-              iure,
-              perferendis aperiam ducimus aliquam est modi. Amet nemo, eos omnis vero ipsa, placeat magnam neque maiores
-              eveniet nobis at laboriosam quibusdam, eaque esse iure magni sed error alias dolor! Sapiente quibusdam
-              quod
-              officiis! Quia eius molestiae eveniet aliquam doloribus maiores eaque, iste, rem sequi mollitia obcaecati
-              necessitatibus sunt vel temporibus asperiores amet? Dolor reiciendis quia dolorum ea, consequuntur a
-              impedit
-              incidunt optio totam magnam officia deleniti assumenda? Impedit excepturi suscipit voluptatibus!</p>
+            <p>Stack: <strong> MERN - MongoDB, Express, React, Node.js</strong></p>
+            <p>Duration - 8 days; group of 3</p>
+            <p>Full-stack CRUD app featuring cities with show pages where users could contact developers in the
+              particular city, also add comments and city.
+              I was implementing the single city, add and edit profile, comments section, along with the backend logic
+              for those components. Also worked on the database structure and the seeding process. Deployed on Heroku
+              and Mongo Atlas.
+            </p>
           </div>
           <div class="projects__btns">
-            <a href="" class="projects_btn">
+            <a href="https://dev-map-cs.herokuapp.com/" class="projects_btn"target="_blank">
               <i class="fas fa-eye"></i>
             </a>
-            <a href="" class="projects_btn">
+            <a href="https://github.com/csillabarna/project-3" class="projects_btn"target="_blank">
               <i class="fab fa-github-alt"></i>
             </a>
           </div>
         </div>
 
         <div class="mySlides fade">
-          <video src="./assets/movieSearch.mp4" width="100%" muted autoplay loop>  
-          </video>  
-            <h3>Movie Search</h3>
+          <img src="../../assets/movieSearch.gif" style="width:100%">
+          <h3>Movie Search</h3>
           <div class="projects_description">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci vel sunt temporibus sed nihil soluta,
-              corrupti eius voluptatum natus, ipsam enim alias. Magnam, reiciendis veritatis molestiae optio maiores
-              iure,
-              perferendis aperiam ducimus aliquam est modi. Amet nemo, eos omnis vero ipsa, placeat magnam neque maiores
-              eveniet nobis at laboriosam quibusdam, eaque esse iure magni sed error alias dolor! Sapiente quibusdam
-              quod
-              officiis! Quia eius molestiae eveniet aliquam doloribus maiores eaque, iste, rem sequi mollitia obcaecati
-              necessitatibus sunt vel temporibus asperiores amet? Dolor reiciendis quia dolorum ea, consequuntur a
-              impedit
-              incidunt optio totam magnam officia deleniti assumenda? Impedit excepturi suscipit voluptatibus!</p>
+            <p>Stack: <strong>React.js, Bulma, REST API </strong> </p>
+            <p>Duration - 2 days; duo project </p>
+            <p>This is a multi-page UI for the OMDB API. With search and filter being the main feature, enabling the
+              user to discover more information about the chosen movie. Mainly we worked together using VSCode live
+              share during the whole project. I added the list of movies and worked on the search function.
+            </p>
           </div>
           <div class="projects__btns">
-            <a href="" class="projects_btn">
+            <a href="https://csillabarna.github.io/project-2/" class="projects_btn"target="_blank">
               <i class="fas fa-eye"></i>
             </a>
-            <a href="" class="projects_btn">
+            <a href="https://github.com/csillabarna/project-2" class="projects_btn"target="_blank">
               <i class="fab fa-github-alt"></i>
             </a>
           </div>
-        </div> 
+        </div>
         <div class="mySlides fade">
-          <video src="./assets/partyPop.mp4" width="100%" muted autoplay loop>  
-
-          </video>
+          <img src="../../assets/partyPop.gif" style="width:100%">
           <h3>partyPOP</h3>
           <div class="projects_description">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci vel sunt temporibus sed nihil soluta,
-              corrupti eius voluptatum natus, ipsam enim alias. Magnam, reiciendis veritatis molestiae optio maiores
-              iure,
-              perferendis aperiam ducimus aliquam est modi. Amet nemo, eos omnis vero ipsa, placeat magnam neque maiores
-              eveniet nobis at laboriosam quibusdam, eaque esse iure magni sed error alias dolor! Sapiente quibusdam
-              quod
-              officiis! Quia eius molestiae eveniet aliquam doloribus maiores eaque, iste, rem sequi mollitia obcaecati
-              necessitatibus sunt vel temporibus asperiores amet? Dolor reiciendis quia dolorum ea, consequuntur a
-              impedit
-              incidunt optio totam magnam officia deleniti assumenda? Impedit excepturi suscipit voluptatibus!</p>
+            <p>Stack: <strong> HTML, CSS, vanilla JavaScript </strong></p>
+              <p>Duration - 7 days;  solo project;</p>
+              <p>The idea was to recreate an existing retro grid game only using HTML, CSS and “vanilla” JavaScript. This
+              made sure to build the logic from scratch and got me comfortable with the JavaScript-DOM relationship.
+            </p>
           </div>
           <div class="projects__btns">
-            <a href="" class="projects_btn">
+            <a href="https://csillabarna.github.io/project-1/" class="projects_btn"target="_blank">
               <i class="fas fa-eye"></i>
             </a>
-            <a href="" class="projects_btn">
+            <a href="https://github.com/csillabarna/project-1" class="projects_btn" target="_blank">
               <i class="fab fa-github-alt"></i>
             </a>
           </div>
@@ -254,7 +234,7 @@
             <i class="devicon-webpack-plain-wordmark"></i>
           </a>
         </div>
-       
+
         <div class="skills__item small" style="background-color:rgb(199, 211, 233); border-radius:10px">
           <img src="../../assets/flask.svg" alt="">
         </div>
@@ -282,24 +262,24 @@
           <a href="#">
             <i class="devicon-git-plain-wordmark"></i>
           </a>
-      </div>
-      <div class="skills__item">
-        <a href="#">
-          <i class="devicon-github-original-wordmark"></i>
-        </a>
-      </div>
-      <div class="skills__item bigger">
-        <a href="#">
-          <i class="devicon-visualstudio-plain-wordmark"></i>
-        </a>
-      </div>
-      <div class="skills__item">
-        <a href="#">
-          <i class="devicon-heroku-original-wordmark"></i>
-        </a>
-      </div>
-      <div class="skills__item" style="background-color: white;">
-        <img src="../assets/rest-api.svg" alt="">
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            <i class="devicon-github-original-wordmark"></i>
+          </a>
+        </div>
+        <div class="skills__item xtra">
+          <a href="#">
+            <i class="devicon-visualstudio-plain-wordmark"></i>
+          </a>
+        </div>
+        <div class="skills__item">
+          <a href="#">
+            <i class="devicon-heroku-original-wordmark"></i>
+          </a>
+        </div>
+        <div class="skills__item" style="background-color: rgb(189, 217, 243); border-radius: 10%;">
+        <img src="../assets/rest-api.png" alt="">
       </div>
       </div>
     </section>
@@ -338,10 +318,7 @@
   <script src="https://kit.fontawesome.com/c1b257e9a0.js" crossorigin="anonymous"></script>
 
   <script src="./js/app.js"></script>
-  <script src="js/wow.min.js"></script>
-  <script>
-  new WOW().init()
-  </script>
+
 
 </body>
 
