--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>👩‍💻CodessCsilla</title>
+  <base href="/portfolio/">
   <link rel="stylesheet" href="/portfolio/dist/css/main.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 
