--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>👩‍💻CodessCsilla</title>
-  <base href="/portfolio/">
-  <link rel="stylesheet" href="/portfolio/dist/css/main.css">
+  <link rel="stylesheet" href="/dist/css/main.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,700;0,800;1,100&family=Sigmar+One&display=swap"
     rel="stylesheet">
@@ -72,7 +70,7 @@
     <section id="me" class="about">
       <figure>
         <div class=about_img-cont>
-          <img class="about__bio-image" src="../../assets/profile-pic-professional.jpg" alt="">
+          <img class="about__bio-image" src="/assets/profile-pic-professional.jpg" alt="">
         </div>
       </figure>
       <div class="about__bio">
@@ -92,7 +90,7 @@
       <h1>My Projects</h1>
       <div class="slideshow-container">
         <div class="mySlides fade">
-          <img src="../../assets/heritage.gif" style="width:100%">
+          <img src="/assets/heritage.gif" style="width:100%">
           <h3>Know your Heritage</h3>
           <div class="projects_description">
             <p> Stack: <strong>Python, Flask, PostgreSQL, ReactJS, Bulma </strong></p>
@@ -113,7 +111,7 @@
           </div>
         </div>
         <div class="mySlides fade">
-          <img src="../../assets/devMap.gif" style="width:100%">
+          <img src="/assets/devMap.gif" style="width:100%">
           <h3>dev.map</h3>
           <div class="projects_description">
             <p>Stack: <strong> MERN - MongoDB, Express, React, Node.js</strong></p>
@@ -136,7 +134,7 @@
         </div>
 
         <div class="mySlides fade">
-          <img src="../../assets/movieSearch.gif" style="width:100%">
+          <img src="/assets/movieSearch.gif" style="width:100%">
           <h3>Movie Search</h3>
           <div class="projects_description">
             <p>Stack: <strong>React.js, Bulma, REST API </strong> </p>
@@ -156,7 +154,7 @@
           </div>
         </div>
         <div class="mySlides fade">
-          <img src="../../assets/partyPop.gif" style="width:100%">
+          <img src="/assets/partyPop.gif" style="width:100%">
           <h3>partyPOP</h3>
           <div class="projects_description">
             <p>Stack: <strong> HTML, CSS, vanilla JavaScript </strong></p>
@@ -237,7 +235,7 @@
         </div>
 
         <div class="skills__item small" style="background-color:rgb(199, 211, 233); border-radius:10px">
-          <img src="../../assets/flask.svg" alt="">
+          <img src="/assets/flask.svg" alt="">
         </div>
         <div class="skills__item">
           <a href="#">
@@ -280,7 +278,7 @@
           </a>
         </div>
         <div class="skills__item" style="background-color: rgb(189, 217, 243); border-radius: 10%;">
-        <img src="../assets/rest-api.png" alt="">
+        <img src="/assets/rest-api.png" alt="">
       </div>
       </div>
     </section>
