--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="menu-btn">
       <span class="menu-btn__burger"></span>
     </div>
-       <nav class="nav">
+    <nav class="nav">
       <ul class="menu-nav">
         <li class="menu-nav__item">
           <a href="#hello" class="menu-nav__link">
@@ -80,8 +80,11 @@
           My experience working in hospitality environments required efficient team collaboration, proactivity and
           performing under pressure, could also help my transition into software development. A great inspiration for me
           to discover and create something which can help make people's lives easier.
-          My ideal future developer role would be in a company with a good support system for juniors, where I can
-          further develop my knowledge in a hands-on way.
+          As a creative, collaborative thinker with a desire to learn -
+          I would enjoy working in an agile development environment; where I can bring my own ideas; able to work across
+          a wide variety of tasks to further develop my knowledge; in a team that has the freedom and responsibility to
+          make decisions.
+
         </p>
       </div>
     </section>
@@ -102,10 +105,10 @@
             </p>
           </div>
           <div class="projects__btns">
-            <a href="https://know-your-heritage.herokuapp.com/" class="projects_btn"target="_blank">
+            <a href="https://know-your-heritage.herokuapp.com/" class="projects_btn" target="_blank">
               <i class="fas fa-eye"></i>
             </a>
-            <a href="https://github.com/csillabarna/project-4" class="projects_btn"target="_blank">
+            <a href="https://github.com/csillabarna/project-4" class="projects_btn" target="_blank">
               <i class="fab fa-github-alt"></i>
             </a>
           </div>
@@ -124,10 +127,10 @@
             </p>
           </div>
           <div class="projects__btns">
-            <a href="https://dev-map-cs.herokuapp.com/" class="projects_btn"target="_blank">
+            <a href="https://dev-map-cs.herokuapp.com/" class="projects_btn" target="_blank">
               <i class="fas fa-eye"></i>
             </a>
-            <a href="https://github.com/csillabarna/project-3" class="projects_btn"target="_blank">
+            <a href="https://github.com/csillabarna/project-3" class="projects_btn" target="_blank">
               <i class="fab fa-github-alt"></i>
             </a>
           </div>
@@ -144,10 +147,10 @@
             </p>
           </div>
           <div class="projects__btns">
-            <a href="https://csillabarna.github.io/project-2/" class="projects_btn"target="_blank">
+            <a href="https://csillabarna.github.io/project-2/" class="projects_btn" target="_blank">
               <i class="fas fa-eye"></i>
             </a>
-            <a href="https://github.com/csillabarna/project-2" class="projects_btn"target="_blank">
+            <a href="https://github.com/csillabarna/project-2" class="projects_btn" target="_blank">
               <i class="fab fa-github-alt"></i>
             </a>
           </div>
@@ -157,13 +160,13 @@
           <h3>partyPOP</h3>
           <div class="projects_description">
             <p>Stack: <strong> HTML, CSS, vanilla JavaScript </strong></p>
-              <p>Duration - 7 days;  solo project;</p>
-              <p>The idea was to recreate an existing retro grid game only using HTML, CSS and “vanilla” JavaScript. This
+            <p>Duration - 7 days; solo project;</p>
+            <p>The idea was to recreate an existing retro grid game only using HTML, CSS and “vanilla” JavaScript. This
               made sure to build the logic from scratch and got me comfortable with the JavaScript-DOM relationship.
             </p>
           </div>
           <div class="projects__btns">
-            <a href="https://csillabarna.github.io/project-1/" class="projects_btn"target="_blank">
+            <a href="https://csillabarna.github.io/project-1/" class="projects_btn" target="_blank">
               <i class="fas fa-eye"></i>
             </a>
             <a href="https://github.com/csillabarna/project-1" class="projects_btn" target="_blank">
@@ -233,7 +236,7 @@
           </a>
         </div>
 
-        <div class="skills__item small" style="background-color:rgb(232, 236, 240); border-radius:10px">
+        <div class="skills__item small" style="background-color:rgb(232, 236, 240); border-radius:10%">
           <img src="/assets/flask.svg" alt="">
         </div>
         <div class="skills__item">
@@ -241,7 +244,7 @@
             <i class="fab fa-sass"></i>
           </a>
         </div>
-        <div class="skills__item">
+        <div class="skills__item big">
           <a href="#">
             <i class="devicon-mongodb-plain-wordmark"></i>
           </a>
@@ -276,13 +279,12 @@
             <i class="devicon-heroku-original-wordmark"></i>
           </a>
         </div>
-        <div class="skills__item" style="background-color: rgb(232, 236, 240); border-radius: 10%;">
-        <img src="/assets/rest-api.png" alt="">
-      </div>
+        <div class="skills__item small" style="background-color: rgb(232, 236, 240); border-radius: 10%;">
+          <img src="/assets/rest-api.png" alt="">
+        </div>
       </div>
     </section>
     <!-- CONTACT -->
-    <!-- get fontawesome -->
     <section id="connect" class="contact">
       <h2>
         Get in touch...</h2>
